fix overflow

--- a/src/app/components/player-modal/player-modal.component.scss
+++ b/src/app/components/player-modal/player-modal.component.scss
@@ -82,6 +82,7 @@ ion-range {
 ion-label {
   display: block;
   width: 100%;
+  overflow: hidden;
 }
 
 ion-label * {
